--- a/query_nyt.ipynb
+++ b/query_nyt.ipynb
@@ -8,6 +8,8 @@
     "\n",
     "In this notebook, we set up the functions to send and process multiple queries to the Article Search API provided by The New York Times. Each query asks for articles that contain a deaf-related phrase, such as \"deaf and dumb\" or \"hearing-impaired\". Full list of phrases below.\n",
     "\n",
+    "The Article Search API returns a max of 10 results at a time. If we got 143 hits. The current offset is 0, so this means we are on the first 10 results, or the first page. If we append `&page=2` to the query, and process that response, now the offset is 10. This confirms we are on the second page. Since each page has 10 results and we have 143 hits, we will need to go through ceil(143/10) = 15 pages to get all of them. \n",
+    "\n",
     "Contents:\n",
     "- Define functions\n",
     "- Get data\n",
