Fix scrape_sentences, noow returns status and sentences

--- a/scrape_nyt.ipynb
+++ b/scrape_nyt.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
        "['../../config.ini']"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -425,7 +425,7 @@
        "[17447 rows x 18 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,31 +483,34 @@
     "    article_id = article['id']\n",
     "    url = article['url']\n",
     "    \n",
+    "    # Navigate to page\n",
     "    browser.get(article['url'])\n",
-    "    if 'Full text is unavailable for this digitized archive article.' in browser.page_source:\n",
-    "        status = 'Full text unavailable.'\n",
-    "        print(status) # will need to manually check these in Time Machine\n",
-    "        return 'time machine'\n",
-    "    elif 'Page Not Found' in browser.page_source:\n",
-    "        status = 'page not found'\n",
-    "        print(status)\n",
-    "        return status\n",
-    "    elif \"Server Error\" in browser.page_source:\n",
-    "        status = 'server error'\n",
-    "        print(status)\n",
-    "        return status\n",
+    "    \n",
+    "    status = ['Full text is unavailable for this digitized archive article.',\n",
+    "              'Page Not Found',\n",
+    "              'Server Error',\n",
+    "              'Success',\n",
+    "              'Failed']\n",
+    "    \n",
+    "    if status[0] in browser.page_source: # time machine\n",
+    "        print(status[0]) \n",
+    "        return status[0], None\n",
+    "    elif status[1] in browser.page_source: # page not found\n",
+    "        print(status[1])\n",
+    "        return status[1], None\n",
+    "    elif status[2] in browser.page_source: # server error\n",
+    "        print(status[2])\n",
+    "        return status[2], None\n",
     "    else:\n",
     "        paragraphs = browser.find_elements_by_tag_name('p')\n",
     "        text = ' '.join([p.text for p in paragraphs])\n",
     "        sentences = [x for x in tokenizer.tokenize(text) if 'deaf' in x.lower() and 'dumb' in x.lower()]\n",
     "        if len(sentences) >= 1: \n",
-    "            status = 'Matching sentences found: ' + str(len(sentences))\n",
-    "            print(status)\n",
+    "            print(status[3] + ': ' + str(len(sentences)) + ' sentence(s) found.') # success\n",
+    "            return status[3], sentences\n",
     "        else:\n",
-    "            status = 'Full text available, but no matching sentence found.'\n",
-    "            print(status)\n",
-    "        return sentences\n",
-    "    return 'hi'"
+    "            print(status[4]) # failed\n",
+    "            return status[4], None"
    ]
   },
   {
@@ -523,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 113,
    "metadata": {
     "scrolled": true
    },
@@ -541,79 +544,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Full text unavailable.\n",
-      "Matching sentences found: 1\n",
-      "Matching sentences found: 1\n",
-      "Matching sentences found: 1\n",
-      "Matching sentences found: 1\n",
-      "Full text unavailable.\n",
-      "Full text unavailable.\n",
-      "Full text unavailable.\n",
-      "Matching sentences found: 1\n",
-      "Matching sentences found: 1\n",
-      "Matching sentences found: 1\n",
-      "Full text unavailable.\n",
-      "Matching sentences found: 1\n",
-      "Full text unavailable.\n",
-      "Matching sentences found: 1\n",
-      "Matching sentences found: 1\n",
-      "Matching sentences found: 1\n",
-      "Matching sentences found: 1\n",
-      "Matching sentences found: 1\n",
-      "Matching sentences found: 1\n",
-      "Matching sentences found: 1\n",
-      "Full text unavailable.\n",
-      "Matching sentences found: 1\n",
-      "Matching sentences found: 1\n",
-      "Matching sentences found: 1\n",
-      "Matching sentences found: 2\n",
-      "Matching sentences found: 1\n",
-      "Matching sentences found: 1\n",
-      "Matching sentences found: 1\n",
-      "Matching sentences found: 1\n",
-      "server error\n",
-      "Matching sentences found: 1\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-82-cef458e63509>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msentences\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mscrape_sentences\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/anaconda3/envs/thesis-env/lib/python3.7/site-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36mapply\u001b[0;34m(self, func, axis, raw, result_type, args, **kwds)\u001b[0m\n\u001b[1;32m   7539\u001b[0m             \u001b[0mkwds\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mkwds\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   7540\u001b[0m         )\n\u001b[0;32m-> 7541\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mop\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_result\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   7542\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   7543\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mapplymap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0;34m\"DataFrame\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/envs/thesis-env/lib/python3.7/site-packages/pandas/core/apply.py\u001b[0m in \u001b[0;36mget_result\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    178\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapply_raw\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    179\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 180\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapply_standard\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    181\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    182\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mapply_empty_result\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/envs/thesis-env/lib/python3.7/site-packages/pandas/core/apply.py\u001b[0m in \u001b[0;36mapply_standard\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    253\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    254\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mapply_standard\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 255\u001b[0;31m         \u001b[0mresults\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mres_index\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapply_series_generator\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    256\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    257\u001b[0m         \u001b[0;31m# wrap results\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/envs/thesis-env/lib/python3.7/site-packages/pandas/core/apply.py\u001b[0m in \u001b[0;36mapply_series_generator\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    282\u001b[0m                 \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mv\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mseries_gen\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    283\u001b[0m                     \u001b[0;31m# ignore SettingWithCopy here in case the user mutates\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 284\u001b[0;31m                     \u001b[0mresults\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    285\u001b[0m                     \u001b[0;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresults\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mABCSeries\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    286\u001b[0m                         \u001b[0;31m# If we have a view on v, we need to make a copy because\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-81-cddf9c000741>\u001b[0m in \u001b[0;36mscrape_sentences\u001b[0;34m(article)\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mscrape_sentences\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marticle\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 23\u001b[0;31m     \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     24\u001b[0m     \u001b[0marticle_id\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0marticle\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'id'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m     \u001b[0murl\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0marticle\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'url'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "Full text is unavailable for this digitized archive article.\n",
+      "Success: 1 sentence(s) found.\n"
      ]
     }
    ],
    "source": [
-    "sentences = data.apply(scrape_sentences, axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 83,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Series([], dtype: object)"
-      ]
-     },
-     "execution_count": 83,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sentences"
+    "statuses, sentences = zip(*data.iloc[0:2].apply(scrape_sentences, axis=1))"
    ]
   },
   {
@@ -621,14 +558,10 @@
    "metadata": {},
    "source": [
     "**To do:**\n",
-    "- Figure out how to make `sentences` accumulate results in the lambda. Right now it's staying empty.\n",
     "- Find regex for each phrase, and when article contains the phrase, use these regexes to target sentences instead of the current approach `if term in sentence` which would get lengthy for some phrases like \"fall on deaf ears\" which have multiple varieties. But again, the regex could get complex as well. Maybe use something like the queries format in query_nyt.ipynb.\n",
     "    - if article contains multiple phrases, e.g. has two True columns in `data`, use something like contains(regex) OR contains(regex)\n",
     "- Include headline in sentences array for each article, if headline contains the phrase\n",
-    "- For the articles that are unavailable as fulltexts, I can collect their URLs based on sentences==None then maybe automatically direct browser to the TimeMachine, then I will manually read it then [type the sentence into Jupyter Notebook using user input](https://stackoverflow.com/questions/34968112/how-to-give-jupyter-cell-standard-input-in-python) and then the program will add this to sentences cell for that article row, move on to the next row that needs it, then redirect browser automatically, and so on. \n",
-    "\n",
-    "Thoughts:\n",
-    "- Potential logic error: Since I targeted \"deaf\" with a query formatted to exclude articles that contain other phrases like \"deaf and dumb\" and \"hearing-impaired\" and so on, I should send the query again, this time excluding \"hearing-impaired\" as a exclusionary condition, because it's not a term with \"deaf\" in it. When I submit it manually I can see this increases the number of hits, which I'm assuming are articles that contain both \"hearing-impaired\" and a non-phrase \"deaf\"."
+    "- For the articles that are unavailable as fulltexts, I can collect their URLs based on sentences==None then maybe automatically direct browser to the TimeMachine, then I will manually read it then [type the sentence into Jupyter Notebook using user input](https://stackoverflow.com/questions/34968112/how-to-give-jupyter-cell-standard-input-in-python) and then the program will add this to sentences cell for that article row, move on to the next row that needs it, then redirect browser automatically, and so on. "
    ]
   }
  ],
