--- a/scrape_nyt.ipynb
+++ b/scrape_nyt.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
        "['../../config.ini']"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -31,6 +31,7 @@
     "import pandas as pd\n",
     "from ast import literal_eval\n",
     "import time\n",
+    "import json\n",
     "\n",
     "from selenium import webdriver\n",
     "from selenium.webdriver.support.ui import WebDriverWait\n",
@@ -435,6 +436,55 @@
     "data['keywords'] = data['keywords'].apply(literal_eval)\n",
     "data['date'] = pd.to_datetime(data['date']) \n",
     "data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Load phrases."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'deaf_and_dumb': ['deaf and dumb', 'deaf dumb'],\n",
+       " 'deaf_mute': ['deaf mute', 'deaf and mute', 'mute deaf', 'mute and deaf'],\n",
+       " 'fell_on_deaf_ears': ['fell on deaf ears',\n",
+       "  'fall on deaf ears',\n",
+       "  'falls on deaf ears',\n",
+       "  'fall on a deaf ear',\n",
+       "  'falling on deaf ears',\n",
+       "  'falling on a deaf ear',\n",
+       "  'turn a deaf ear',\n",
+       "  'turned deaf ears',\n",
+       "  'turned a deaf ear',\n",
+       "  'turning deaf ears',\n",
+       "  'turning a deaf ear'],\n",
+       " 'hearing_impaired': ['hearing impaired', 'hearing impairment'],\n",
+       " 'tone_deaf': ['tone deaf'],\n",
+       " 'deaf_as_a_post': ['deaf as a post'],\n",
+       " 'stone_deaf': ['stone deaf'],\n",
+       " 'deaf': ['deaf']}"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "with open('phrases.txt', 'r') as infile:\n",
+    "    phrases = json.load(infile)\n",
+    "    \n",
+    "phrases"
    ]
   },
   {
