Consider headline as a sentence too

--- a/scrape_nyt.ipynb
+++ b/scrape_nyt.ipynb
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 245,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,70 +548,105 @@
     "    \n",
     "    return browser\n",
     "    \n",
-    "    \n",
+    "\n",
     "def scrape_sentences(article):\n",
+    "    matches = []\n",
+    "    \n",
+    "    # Get all sentences\n",
+    "    paragraphs = browser.find_elements_by_tag_name('p')\n",
+    "    text = ' '.join([p.text for p in paragraphs])\n",
+    "    sentences = [x for x in tokenizer.tokenize(text)] # break into sentences\n",
+    "    sentences.append(article['headline']) # add headline to sentences\n",
+    "    sentences_cleaned = [' '.join(RegexpTokenizer(r'\\w+').tokenize(x)).lower() for x in sentences] # remove punctuation, lowercase\n",
+    "\n",
+    "    # Get all varieties of the phrases for this article\n",
+    "    phrases_for_this_article = phrases_for_each_article[article.name]\n",
+    "    phrase_varieties = ['deaf'] # add by default, also because we made the 'deaf' column to exclude other 'deaf' terms\n",
+    "    for phrase in phrases_for_this_article:\n",
+    "        phrase_varieties += [x for x in phrases[phrase]]\n",
+    "\n",
+    "    # Get sentences that contain a phrase variety\n",
+    "    for p in phrase_varieties:\n",
+    "        matches += ([sentences[i] for i, x in enumerate(sentences_cleaned) if (p in x and sentences[i] not in matches)])\n",
+    "    \n",
+    "    return matches\n",
+    "    \n",
+    "    \n",
+    "def scrape(article):\n",
     "    time.sleep(4)\n",
     "    article_id = article['id']\n",
     "    url = article['url']\n",
-    "    \n",
-    "    # Navigate to page\n",
-    "    browser.get(article['url'])\n",
-    "    \n",
-    "    status = ['Full text is unavailable for this digitized archive article.',\n",
+    "    status = None\n",
+    "    matches = None\n",
+    "    statuses = ['Full text is unavailable for this digitized archive article.',\n",
     "              'Page Not Found',\n",
     "              'Server Error',\n",
     "              'Success',\n",
     "              'Failed']\n",
     "    \n",
-    "    if status[0] in browser.page_source: # time machine\n",
-    "        print(status[0]) \n",
-    "        return status[0], None\n",
-    "    elif status[1] in browser.page_source: # page not found\n",
-    "        print(status[1])\n",
-    "        return status[1], None\n",
-    "    elif status[2] in browser.page_source: # server error\n",
-    "        print(status[2])\n",
-    "        return status[2], None\n",
-    "    else:\n",
-    "        # Get all sentences\n",
-    "        paragraphs = browser.find_elements_by_tag_name('p')\n",
-    "        text = ' '.join([p.text for p in paragraphs])\n",
-    "        sentences = [x for x in tokenizer.tokenize(text)] # break into sentences\n",
-    "        sentences_cleaned = [' '.join(RegexpTokenizer(r'\\w+').tokenize(x)).lower() for x in sentences] # remove punctuation, lowercase\n",
-    "         \n",
-    "        # Get all varieties of the phrases for this article\n",
-    "        phrases_for_this_article = phrases_for_each_article[article.name]\n",
-    "        phrase_varieties = ['deaf'] # add by default, also because we made the 'deaf' column to exclude other 'deaf' terms\n",
-    "        for phrase in phrases_for_this_article:\n",
-    "            phrase_varieties += [x for x in phrases[phrase]]\n",
-    "        \n",
-    "        # Get sentences that contain a phrase variety\n",
-    "        matches = []\n",
-    "        for p in phrase_varieties:\n",
-    "            matches += ([sentences[i] for i, x in enumerate(sentences_cleaned) if (p in x and sentences[i] not in matches)])\n",
-    "        \n",
-    "        if len(sentences) >= 1: \n",
-    "            print(status[3] + ': ' + str(len(matches)) + ' sentence(s) found.') # success\n",
-    "            return status[3], matches\n",
+    "    # Navigate to page\n",
+    "    browser.get(article['url'])\n",
+    "    \n",
+    "    if statuses[0] in browser.page_source: # time machine\n",
+    "        status = statuses[0]\n",
+    "        matches = scrape_sentences(article) # will only attempt to scrape headline\n",
+    "        if len(matches) >= 1:\n",
+    "            print(status + ': ' + str(len(matches)) + ' sentence(s) found.') \n",
     "        else:\n",
-    "            print(status[4]) # failed\n",
-    "            return status[4], None"
+    "            matches = None\n",
+    "            print(status)\n",
+    "            \n",
+    "    elif statuses[1] in browser.page_source: \n",
+    "        status = statuses[1] # page not found\n",
+    "        print(statuses[1])\n",
+    "        \n",
+    "    elif statuses[2] in browser.page_source: \n",
+    "        status = statuses[2] # server error\n",
+    "        print(statuses[2])\n",
+    "        \n",
+    "    else:\n",
+    "        status = statuses[3] # success\n",
+    "        matches = scrape_sentences(article) # scrape the article\n",
+    "        if len(matches) >= 1: \n",
+    "            status = statuses[3]\n",
+    "            print(status + ': ' + str(len(matches)) + ' sentence(s) found.') \n",
+    "        else:\n",
+    "            status = statuses[4]\n",
+    "            matches = None\n",
+    "            print(status) # failed\n",
+    "            \n",
+    "    return status, matches"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Scrape sentences. Each row will contain either of 3 values:\n",
-    "- `page not found` — if the page was not found\n",
+    "Scrape sentences. We get back two lists, `statuses` and `sentences`.\n",
+    "\n",
+    "`sentences` is a 2D list with all the sentences found for each article, including the headline if it matched. \n",
+    "\n",
+    "`statuses` is a 1D list with the scrape status for each article:\n",
+    "- `Page Not Found` — if the page was not found\n",
+    "- \n",
+    "\n",
+    "Each row will contain either of 3 values:\n",
+    "- \n",
     "- `server error` — if there was a server error\n",
     "- `time machine` — if there is no fulltext available, and the article needs to be viewed through Time Machine\n",
-    "- `[]` - array of sentence(s)"
+    "- `[]` - array of sentence(s)\n",
+    "\n",
+    "\n",
+    "    statuses = ['Full text is unavailable for this digitized archive article.',\n",
+    "              'Page Not Found',\n",
+    "              'Server Error',\n",
+    "              'Success',\n",
+    "              'Failed']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 246,
    "metadata": {
     "scrolled": true
    },
@@ -629,21 +664,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Full text is unavailable for this digitized archive article.\n",
+      "Full text is unavailable for this digitized archive article.: 1 sentence(s) found.\n",
       "Success: 1 sentence(s) found.\n",
       "Success: 1 sentence(s) found.\n",
       "Success: 1 sentence(s) found.\n",
       "Success: 1 sentence(s) found.\n",
-      "Full text is unavailable for this digitized archive article.\n",
-      "Full text is unavailable for this digitized archive article.\n",
-      "Full text is unavailable for this digitized archive article.\n",
+      "Full text is unavailable for this digitized archive article.: 1 sentence(s) found.\n",
+      "Full text is unavailable for this digitized archive article.: 1 sentence(s) found.\n",
+      "Full text is unavailable for this digitized archive article.: 1 sentence(s) found.\n",
       "Success: 1 sentence(s) found.\n",
       "Success: 1 sentence(s) found.\n"
      ]
     }
    ],
    "source": [
-    "statuses, sentences = zip(*data.iloc[0:10].apply(scrape_sentences, axis=1))"
+    "statuses, sentences = zip(*data.iloc[0:10].apply(scrape, axis=1))"
    ]
   },
   {
@@ -651,35 +686,61 @@
    "metadata": {},
    "source": [
     "**To do:**\n",
-    "- Find regex for each phrase, and when article contains the phrase, use these regexes to target sentences instead of the current approach `if term in sentence` which would get lengthy for some phrases like \"fall on deaf ears\" which have multiple varieties. But again, the regex could get complex as well. Maybe use something like the queries format in query_nyt.ipynb.\n",
-    "    - if article contains multiple phrases, e.g. has two True columns in `data`, use something like contains(regex) OR contains(regex)\n",
-    "- Include headline in sentences array for each article, if headline contains the phrase\n",
     "- For the articles that are unavailable as fulltexts, I can collect their URLs based on sentences==None then maybe automatically direct browser to the TimeMachine, then I will manually read it then [type the sentence into Jupyter Notebook using user input](https://stackoverflow.com/questions/34968112/how-to-give-jupyter-cell-standard-input-in-python) and then the program will add this to sentences cell for that article row, move on to the next row that needs it, then redirect browser automatically, and so on. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 254,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(None,\n",
+       "('Full text is unavailable for this digitized archive article.',\n",
+       " 'Success',\n",
+       " 'Success',\n",
+       " 'Success',\n",
+       " 'Success',\n",
+       " 'Full text is unavailable for this digitized archive article.',\n",
+       " 'Full text is unavailable for this digitized archive article.',\n",
+       " 'Full text is unavailable for this digitized archive article.',\n",
+       " 'Success',\n",
+       " 'Success')"
+      ]
+     },
+     "execution_count": 254,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "statuses"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 255,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(['THE DEAF AND DUMB WAITER.'],\n",
        " ['\"The international community has been totally deaf and dumb on the situation between Sudan and Chad,\" Mr. Deby said, declaring that \"enough is enough.\"'],\n",
        " [\"'Like I Am in a Coffin' Her first husband, Ms. Bruce said, left her when the doctor announced their son was deaf and dumb.\"],\n",
        " ['\"You\\'d have to be blind, deaf and dumb to not have known that oil prices went up,\" said Bernard Sosnick, a retail analyst at Oppenheimer & Company.'],\n",
        " ['“We could be deaf, dumb and blind within seconds,” Mr. Cooper, who sits on the House Armed Services Committee with Mr. Rogers, said in February at a space forum at the Center for Strategic and International Studies.'],\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
+       " ['NEW-YORK CITY.; Union of the Liberal Societies. Midnight Robberies in the Park. Fire and Rowdyism. The Deaf and Dumb. THE COURTS. DISPENSARY REPORTS. DETERMINED EFFORTS TO COMMIT SUICIDE AT COUP DE SOLIEL. CENSUS OF HOBOKEN.'],\n",
+       " ['Deaf and Dumb at Intervals.'],\n",
+       " ['Singular Calamity Two Men Made Deaf and Dumb.'],\n",
        " [\"He struggled to raise himself to his feet; he undermined John Gray's already tottering reason with a succession of graceful but complex signs drawn from the deaf and dumb language; then he began to rail at Gray, in a peculiarly barbarous foreign tongue for idling there and looking stupid when he ought to be bestirring himself and giving all the help he could to an unfortunate stranger.\"],\n",
        " [\"I wouldn't say they were universally gloomy, but I did detect something I hadn't detected before: a real undertow of concern that America is losing its competitive edge vis-à-vis China, India, Japan and other Asian tigers, and that the Bush team is deaf, dumb and blind to this situation.\"])"
       ]
      },
-     "execution_count": 229,
+     "execution_count": 255,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -687,6 +748,13 @@
    "source": [
     "sentences"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
